less/app.less
/* ... */
// Fixed header
// --------------------------------------------------

.fixed-header {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	height: 4rem;
	padding: 0 @grid-gutter-width;
	background: @music-hp-dark;
	color: @music-medium;
	border-bottom: 1px solid #253645;
	z-index: @z-fixed-header;
	-webkit-backface-visibility: hidden; // prevent flickering of bar on scroll in Chrome/Safari
	-webkit-transform: translate3d(0,0,0);

	@media screen and (max-width: @screen-xs-max){
		position: absolute;
		padding: 0 @grid-gutter-width / 2;
	}

	.logo,
	.slug,
	.title,
	.full-list,
	.share,
    .chromecast,
    .fullscreen {
		display: inline-block;
		line-height: 4rem;
		vertical-align: middle;
		margin: 0 1rem 0 0;
	}

	.fullscreen {
		.touch & {
			.hide;
		}
	}

    .chromecast {
        display: none;
    }

	.logo {
		height: 2.5rem;
		max-height: 50px;

		@media screen and (max-width: @screen-xs-max){
			margin-right: 10px;
			height: 2rem;
		}
	}

	.slug {
		font-family: 'Knockout 31 4r';
		color: @music-red-light;
		text-transform: uppercase;
	}

	.title {
		font-size: @font-size-base * 1.1;
		font-family: 'Gotham SSm';
		text-transform: uppercase;
		letter-spacing: 0.1rem;
		color: @white;
		-webkit-font-smoothing: antialiased;

		@media screen and (max-width: @screen-xs-max){
			margin-right: 0;
		}

		@media screen and (min-width: @screen-sm){
			font-size: @font-size-base * 1.2;
		}
	}

	.project-logo {
		height: 2.5rem;
	}

	.fixed-header-controls {
		.pull-right;
	}

	.fixed-header-controls a {
		font-size: @font-size-base * 0.875;
		color: @music-hp-link-color;
		-webkit-font-smoothing: antialiased;
		// font-family: 'Knockout 31 4r';
		text-transform: lowercase;
		// letter-spacing: 1px;
		cursor: pointer;

		&:hover {
			color: @white;
			text-decoration: none;
		}
	}

	.fixed-header-controls img {
		height: 1.75rem;
		display: inline-block;
		margin-top: -0.25rem;
	}

	.fixed-header-controls > div {
		margin-right: 0.5rem;
	}

	@media screen and (max-width: @screen-sm-max){
		.slug { display: none; }
	}

	@media screen and (max-width: @screen-xs-max){
		.full-list,
		.share {
			display: none;
		}
	}
}

// Playlist
// --------------------------------------------------

.show-history,
.show-history:hover,
.show-history:focus,
.show-history:visited {
	.transition(all 0.2s ease-in-out);
	color: @music-hp-link-color;
	border: 1px solid @music-hp-link-color;
	// font-family: 'Knockout 31 4r';
	text-transform: uppercase;
	letter-spacing: 0.1rem;
	font-size: @font-size-base * 0.712;
	position: fixed;
	top: 5rem;
	right: @grid-gutter-width;
	background: fadeout(@music-hp-dark, 10%);
	padding: 0.5rem;
	border-radius: 4px;
	text-decoration: none;
	.scale(1);
	.translate(0,0);
	opacity: 1;
	width: 10rem;
	text-align: center;

	.no-touch & {
		&:hover {
			color: @white;
			border-color: @white;
			text-decoration: none;
		}
	}

	&.offscreen {
		.scale(0);
		opacity: 0;
	}

	@media screen and (max-width: @screen-xs-max){
		width: auto;
		top: 0;
		left: 0;
		right: 0;
		height: 4rem;
		line-height: 3rem;
		border-width: 0 0 1px 0;
		border-color: #253645;
		border-radius: 0;
		text-align: center;
		vertical-align: middle;
		font-size: @font-size-base;
		background: fadeout(@music-hp-dark, 4%);

		&.offscreen {
			.scale(1);
			.translate(0,-100%);
		}
	}


}

.songs {
	display: none;
	color: @white;
	background-color: #142129;
	background: repeating-radial-gradient(circle at 0 0, #121b21, #19232b 7rem);
	padding-top: 4rem;
	padding-bottom: 5rem;
}

.song {
	border-top: 2px solid transparent;
	.transition(0.3s all ease-in-out);
	-webkit-backface-visibility: hidden; // prevent flickering in Safari

	> .container-fluid {
		.transition(0.3s height ease-in-out);
		-webkit-backface-visibility: hidden; // prevent flickering in Safari
		padding: 0 @grid-gutter-width / 2;
		margin: 0 auto;
		display: table;
		width: 100%;

		@media screen and (max-width: @screen-xs-max){
			padding-left: 0.5rem;
			padding-right: 0.5rem;
		}
	}

	&:first-child {
		border-color: transparent;
	}

	&.small {
		cursor: pointer;
		background: darken(@music-hp-dark, 5%);
		border-color: @music-hp-dark;
	}

	.song-info {
		.make-row();
		display: table-cell;
		vertical-align: middle;
		height: 100%;
		padding: @grid-gutter-width 0;
		.transition(all 0.3s ease-in-out);

		.small& {
			padding: @line-height-computed / 2 0;
			min-height: 0;
		}

		@media screen and (max-width: @screen-xs-max){
			padding-top: 0.5rem;
		}


		@media screen and (orientation: portrait){
			margin-left: 0.5rem;
			margin-right: 0.5rem;
		}

		.album-cover {
			.transition(width 0.3s ease-in-out);
			.make-xs-column(3);
			.make-sm-column(3);
			.make-md-column(4);

			.small& {
				.transition(width 0.3s ease-in-out  0.3s);
				.make-sm-column(1);
				margin-bottom: 0;

				@media screen and (max-width: @screen-xs-max){
					padding-left: 0.5rem;
					padding-right: 0.5rem;
				}
			}

			margin-bottom: @line-height-computed;
			margin-right: 0;

			@media screen and (max-width: @screen-xs-max){
				padding-left: 0.5rem;
				padding-right: 0.5rem;
			}
		}

		.song-info-wrapper {
			.transition(all 0.3s ease-in-out);
			.make-sm-column(9);
			.make-md-column(8);
			padding-bottom: @font-size-base * 3;

			@media screen and (max-width: @screen-xs-max){
				padding-left: 0.5rem;
				padding-right: 0.5rem;
			}

			@media screen and (max-width: @screen-xs-max){
				.artist,
				.song-title {
					margin-left: 25%;
				}

				.song-title {
					text-indent: -0.4rem;
				}

				.tag-header {
					.clearfix;
				}
			}

			.small& {
				.transition(all 0.3s ease-in-out  0.3s);
				.make-sm-column(11);
				padding-left: 0.5rem;
				padding-right: 0.5rem;
				padding-bottom: 0;
			}
		}
	}
}
/* ... */

